--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,1 +1,71 @@
+/* Import fonts Inter and Syne */
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Syne:wght@400..800&display=swap');
+
 @import "tailwindcss";
+
+/* @theme {  
+    --font-default: "Inter", sans-serif;
+    --font-logo: "Syne", sans-serif;
+    --font-weight-logo: 500;
+} */
+/* Reset & Box Sizing */
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+html {
+  font-size: 100%;
+  -webkit-text-size-adjust: 100%;
+  scroll-behavior: smooth;
+}
+
+body {
+    font-family: "Inter", sans-serif;
+  font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
+  line-height: 1.5;
+  background-color: var(--color-bg-primary);
+  color: var(--color-text-primary);
+  -webkit-font-smoothing: antialiased;
+  text-rendering: optimizeLegibility;
+  font-optical-sizing: auto;
+  font-style: normal;
+}
+
+/* Logo font */
+.logo {
+  font-family: "Syne", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 500;
+  font-style: normal;
+}
+
+/* Theme Variables (Light Mode Default) */
+:root {
+  --color-bg-primary: #FFFFFF;
+  --color-bg-secondary: #F5F5F5;
+  --color-text-primary: #1C1C1C;
+  --color-text-secondary: #A3A1A1;
+  --color-border: #D9D9D9;
+  --color-accent: #D9D9D9;
+
+  /* Theme toggle button */
+  --color-toggle-bg: #F5F5F5;
+  --color-logo-text: #1C1C1C;
+}
+
+/* 4. Dark Mode (toggle with data-theme="dark") */
+.dark {
+  --color-bg-primary: #1C1C1C;
+  --color-bg-secondary: #303030;
+  --color-text-primary: #FFFFFF;
+  --color-text-secondary: #A3A1A1;
+  --color-border: #434343;
+  --color-accent: #858585;
+
+  /* Theme toggle button */
+  --color-toggle-bg: #FFFFFF;
+  --color-toggle-icon: #333333;
+  --color-logo-text: #FFFFFF;
+}
