--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,12 +2,21 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Syne:wght@400..800&display=swap');
 
 @import "tailwindcss";
+@custom-variant dark (&:where(.dark, .dark *));
+@theme {
+  /* COLORS */
+  /* Default */
+  --color-black: #212529;
+  --color-white:#FFFFFF;
+  --color-platinum: #DEE2E6;
+  --color-teal: #1F7A8C;
+  --color-slate-gray: #6C757D;
+  --color-french-gray: #ADB5BD;
+  /* Dark Theme */
+  --color-onyx: #343A40;
+  --color-outer-space: #495057;
+}
 
-/* @theme {  
-    --font-default: "Inter", sans-serif;
-    --font-logo: "Syne", sans-serif;
-    --font-weight-logo: 500;
-} */
 /* Reset & Box Sizing */
 *,
 *::before,
@@ -22,7 +31,6 @@ html {
 }
 
 body {
-    font-family: "Inter", sans-serif;
   font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
   line-height: 1.5;
   background-color: var(--color-bg-primary);
@@ -37,35 +45,11 @@ body {
 .logo {
   font-family: "Syne", sans-serif;
   font-optical-sizing: auto;
-  font-weight: 500;
+  font-weight: 600;
   font-style: normal;
 }
 
-/* Theme Variables (Light Mode Default) */
-:root {
-  --color-bg-primary: #FFFFFF;
-  --color-bg-secondary: #F5F5F5;
-  --color-text-primary: #1C1C1C;
-  --color-text-secondary: #A3A1A1;
-  --color-border: #D9D9D9;
-  --color-accent: #D9D9D9;
-
-  /* Theme toggle button */
-  --color-toggle-bg: #F5F5F5;
-  --color-logo-text: #1C1C1C;
-}
-
-/* 4. Dark Mode (toggle with data-theme="dark") */
-.dark {
-  --color-bg-primary: #1C1C1C;
-  --color-bg-secondary: #303030;
-  --color-text-primary: #FFFFFF;
-  --color-text-secondary: #A3A1A1;
-  --color-border: #434343;
-  --color-accent: #858585;
-
-  /* Theme toggle button */
-  --color-toggle-bg: #FFFFFF;
-  --color-toggle-icon: #333333;
-  --color-logo-text: #FFFFFF;
+/* Shadow */
+.default-shadow {
+  box-shadow: 0px 1px 2px 0px var(--color-platinum);
 }
