--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,6 +13,7 @@
   --color-slate-gray: #6C757D;
   --color-french-gray: #ADB5BD;
   --shadow-light: 0px 1px 2px 0px var(--color-platinum);
+  --shadow-secondary: 0px 1px 2px 0px var(--color-slate-gray);
   /* Dark Theme */
   --color-onyx: #343A40;
   --color-outer-space: #495057;
@@ -40,7 +41,6 @@ body {
   text-rendering: optimizeLegibility;
   font-optical-sizing: auto;
   font-style: normal;
-  /* @apply transition-colors duration-100 ease-in-out; */
 }
 
 /* Logo font */
