feat: message form handling

--- a/assets/css/output.css
+++ b/assets/css/output.css
@@ -25,6 +25,7 @@
     --font-weight-medium: 500;
     --leading-relaxed: 1.625;
     --radius-2xl: 1rem;
+    --shadow-md: 0px 1px 2px 0px var(--color-muted);
     --default-font-family: var(--font-sans);
     --default-mono-font-family: var(--font-mono);
     --color-mono-50: #FFFFFF;
@@ -40,6 +41,7 @@
     --color-border-light: var(--color-mono-200);
     --color-muted: var(--color-mono-500);
     --color-placeholder: var(--color-mono-400);
+    --color-background-dark: var(--color-mono-950);
     --color-border-dark: var(--color-mono-800);
     --color-muted-dark: var(--color-mono-600);
   }
@@ -261,9 +263,6 @@
   .h-6 {
     height: calc(var(--spacing) * 6);
   }
-  .h-10 {
-    height: calc(var(--spacing) * 10);
-  }
   .h-dvh {
     height: 100dvh;
   }
@@ -281,9 +280,6 @@
   }
   .w-5 {
     width: calc(var(--spacing) * 5);
-  }
-  .w-10 {
-    width: calc(var(--spacing) * 10);
   }
   .w-full {
     width: 100%;
@@ -382,14 +378,8 @@
     border-bottom-style: var(--tw-border-style);
     border-bottom-width: 0px;
   }
-  .border-accent-600 {
-    border-color: var(--color-accent-600);
-  }
   .border-border-light {
     border-color: var(--color-border-light);
-  }
-  .bg-accent-600 {
-    background-color: var(--color-accent-600);
   }
   .bg-background {
     background-color: var(--color-background);
@@ -403,9 +393,6 @@
   .p-3 {
     padding: calc(var(--spacing) * 3);
   }
-  .p-4 {
-    padding: calc(var(--spacing) * 4);
-  }
   .px-3 {
     padding-inline: calc(var(--spacing) * 3);
   }
@@ -414,9 +401,6 @@
   }
   .py-3 {
     padding-block: calc(var(--spacing) * 3);
-  }
-  .pr-12 {
-    padding-right: calc(var(--spacing) * 12);
   }
   .pb-28 {
     padding-bottom: calc(var(--spacing) * 28);
@@ -447,10 +431,6 @@
   }
   .text-foreground {
     color: var(--color-foreground);
-  }
-  .shadow-md {
-    --tw-shadow: 0px 1px 2px 0px var(--tw-shadow-color, var(--color-muted));
-    box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
   }
   .shadow-sm {
     --tw-shadow: 0px 1px 2px 0px var(--tw-shadow-color, var(--color-border-light));
@@ -608,6 +588,28 @@ body {
   font-optical-sizing: auto;
   font-weight: 600;
   font-style: normal;
+}
+.send-btn-default {
+  background-color: var(--color-background);
+  border-color: var(--color-border-light);
+  color: var(--color-placeholder);
+}
+.send-btn-active {
+  background-color: var(--color-accent-600);
+  border: var(--color-accent-600);
+  box-shadow: var(--shadow-md);
+  color: var(--color-background);
+}
+.dark .send-btn-default-dark {
+  background-color: var(--color-background-dark);
+  border-color: var(--color-border-dark);
+  color: var(--color-placeholder);
+}
+.dark .send-btn-active-dark {
+  background-color: var(--color-accent-600);
+  border: var(--color-accent-600);
+  box-shadow: var(--shadow-md);
+  color: var(--color-background);
 }
 @property --tw-border-style {
   syntax: "*";
