--- a/assets/css/output.css
+++ b/assets/css/output.css
@@ -24,6 +24,7 @@
     --text-4xl--line-height: calc(2.5 / 2.25);
     --font-weight-medium: 500;
     --leading-relaxed: 1.625;
+    --radius-sm: 0.25rem;
     --radius-2xl: 1rem;
     --shadow-md: 0px 1px 2px 0px var(--color-muted);
     --default-font-family: var(--font-sans);
@@ -254,6 +255,9 @@
   .hidden {
     display: none;
   }
+  .h-4 {
+    height: calc(var(--spacing) * 4);
+  }
   .h-4\.5 {
     height: calc(var(--spacing) * 4.5);
   }
@@ -277,6 +281,9 @@
   }
   .min-h-full {
     min-height: 100%;
+  }
+  .w-4 {
+    width: calc(var(--spacing) * 4);
   }
   .w-4\.5 {
     width: calc(var(--spacing) * 4.5);
@@ -353,6 +360,9 @@
   .rounded-full {
     border-radius: calc(infinity * 1px);
   }
+  .rounded-sm {
+    border-radius: var(--radius-sm);
+  }
   .rounded-t-2xl {
     border-top-left-radius: var(--radius-2xl);
     border-top-right-radius: var(--radius-2xl);
@@ -390,17 +400,41 @@
   .fill-current {
     fill: currentcolor;
   }
+  .p-1 {
+    padding: calc(var(--spacing) * 1);
+  }
   .p-2 {
     padding: calc(var(--spacing) * 2);
   }
   .p-3 {
     padding: calc(var(--spacing) * 3);
   }
+  .p-4 {
+    padding: calc(var(--spacing) * 4);
+  }
+  .px-1 {
+    padding-inline: calc(var(--spacing) * 1);
+  }
+  .px-2 {
+    padding-inline: calc(var(--spacing) * 2);
+  }
   .px-3 {
     padding-inline: calc(var(--spacing) * 3);
   }
   .px-4 {
     padding-inline: calc(var(--spacing) * 4);
+  }
+  .py-1 {
+    padding-block: calc(var(--spacing) * 1);
+  }
+  .py-1\.5 {
+    padding-block: calc(var(--spacing) * 1.5);
+  }
+  .py-2 {
+    padding-block: calc(var(--spacing) * 2);
+  }
+  .py-2\.5 {
+    padding-block: calc(var(--spacing) * 2.5);
   }
   .py-3 {
     padding-block: calc(var(--spacing) * 3);
@@ -424,6 +458,10 @@
     font-size: var(--text-xs);
     line-height: var(--tw-leading, var(--text-xs--line-height));
   }
+  .leading-0 {
+    --tw-leading: calc(var(--spacing) * 0);
+    line-height: calc(var(--spacing) * 0);
+  }
   .leading-relaxed {
     --tw-leading: var(--leading-relaxed);
     line-height: var(--leading-relaxed);
@@ -434,6 +472,12 @@
   }
   .text-foreground {
     color: var(--color-foreground);
+  }
+  .text-mono-200 {
+    color: var(--color-mono-200);
+  }
+  .text-mono-400 {
+    color: var(--color-mono-400);
   }
   .shadow-sm {
     --tw-shadow: 0px 1px 2px 0px var(--tw-shadow-color, var(--color-border-light));
@@ -465,10 +509,38 @@
       }
     }
   }
+  .hover\:bg-mono-200 {
+    &:hover {
+      @media (hover: hover) {
+        background-color: var(--color-mono-200);
+      }
+    }
+  }
+  .hover\:bg-muted {
+    &:hover {
+      @media (hover: hover) {
+        background-color: var(--color-muted);
+      }
+    }
+  }
   .hover\:text-background {
     &:hover {
       @media (hover: hover) {
         color: var(--color-background);
+      }
+    }
+  }
+  .hover\:text-foreground {
+    &:hover {
+      @media (hover: hover) {
+        color: var(--color-foreground);
+      }
+    }
+  }
+  .hover\:text-muted {
+    &:hover {
+      @media (hover: hover) {
+        color: var(--color-muted);
       }
     }
   }
