--- a/assets/css/output.css
+++ b/assets/css/output.css
@@ -26,6 +26,8 @@
     --radius-2xl: 1rem;
     --shadow-md: 0px 1px 2px 0px var(--color-muted);
     --ease-in-out: cubic-bezier(0.4, 0, 0.2, 1);
+    --animate-ping: ping 1s cubic-bezier(0, 0, 0.2, 1) infinite;
+    --animate-pulse: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
     --default-transition-duration: 150ms;
     --default-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     --default-font-family: var(--font-sans);
@@ -319,6 +321,12 @@
   .-rotate-30 {
     rotate: calc(30deg * -1);
   }
+  .animate-ping {
+    animation: var(--animate-ping);
+  }
+  .animate-pulse {
+    animation: var(--animate-pulse);
+  }
   .cursor-pointer {
     cursor: pointer;
   }
@@ -437,6 +445,12 @@
   .pb-28 {
     padding-bottom: calc(var(--spacing) * 28);
   }
+  .pl-2 {
+    padding-left: calc(var(--spacing) * 2);
+  }
+  .pl-3 {
+    padding-left: calc(var(--spacing) * 3);
+  }
   .text-2xl {
     font-size: var(--text-2xl);
     line-height: var(--tw-leading, var(--text-2xl--line-height));
@@ -463,6 +477,12 @@
   }
   .text-foreground {
     color: var(--color-foreground);
+  }
+  .text-mono-400 {
+    color: var(--color-mono-400);
+  }
+  .text-mono-500 {
+    color: var(--color-mono-500);
   }
   .text-mono-600 {
     color: var(--color-mono-600);
@@ -587,6 +607,11 @@
   .dark\:text-background {
     &:where(.dark, .dark *) {
       color: var(--color-background);
+    }
+  }
+  .dark\:text-mono-600 {
+    &:where(.dark, .dark *) {
+      color: var(--color-mono-600);
     }
   }
   .dark\:text-mono-800 {
@@ -782,6 +807,17 @@ body {
 @property --tw-ease {
   syntax: "*";
   inherits: false;
+}
+@keyframes ping {
+  75%, 100% {
+    transform: scale(2);
+    opacity: 0;
+  }
+}
+@keyframes pulse {
+  50% {
+    opacity: 0.5;
+  }
 }
 @layer properties {
   @supports ((-webkit-hyphens: none) and (not (margin-trim: inline))) or ((-moz-orient: inline) and (not (color:rgb(from red r g b)))) {
